-aded Player hud component
-added CFont setting to Players and made players with strength show in red
-added CFont setting to PotionEffects
-added TotemPopCounter
-added TabGUI
-added `-enemy <add | del> <name>`, enemies will show in red in tab list
-added Inventory hud component
-fps uses new color picker instead of rgb settings