@@ -18,6 +18,10 @@ public class ClientnameCommand extends Command {
 
     @Override
     public void onCommand(String command, String[] args) throws Exception {
-        OsirisMod.MODNAME = args[0];
+        if(!args[0].replace("__", "").equalsIgnoreCase("")) {
+            OsirisMod.MODNAME = args[0].replace("__", "");
+            sendClientMessage("set client name to " + args[0].replace("__", ""));
+        }else
+            sendClientMessage(getSyntax());
     }
 }
